2008-02-03  Nicolas François  <nicolas.francois@centraliens.net>

	* src/usermod.c: Use a function to convert the dates from
	/etc/shadow to human readable dates.

2008-02-03  Nicolas François  <nicolas.francois@centraliens.net>

	* src/login.c: Do not translate the fromhost variable. It is
	always used for syslog messages.

2008-02-03  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, lib/defines.h: Switch to the C locale before sending
	messages to syslog. The messages sent by shadow were not
	translated, but error messages from PAM returned by pam_strerror()
	were translated in the users's locale.

2008-02-03  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS: newusers will behave more like useradd.
	* src/newusers.c: The user's ID must be found before the group ID
	to mimic useradd's behavior choices of UID and GID.
	* src/newusers.c: Reuse the generic find_new_uid() and
	find_new_gid() functions. This permits to respect the
	UID_MIN/UID_MAX and GID_MIN/GID_MAX variables, should 
	* src/newusers.c: Check if the user or group exist using the
	external databases (with the libc getpwnam/getgrnam functions).
	Refuse to update an user which exist in an external database but
	does not exist in the local database.
	* src/newusers.c: Check the usernames and groupnames with
	check_user_name() and check_group_name()
	* src/newusers.c: Use isdigit() for readability.
	* src/newusers.c: Check if numerical IDs are valid (no remaining
	chars).

2008-02-03  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/newusers.c: Fix the support for the NONE crypt method.

2008-02-03  Nicolas François  <nicolas.francois@centraliens.net>

	* src/newusers.c: Fix shadow group support (the list of admins was
	not defined; it is now set to an empty list).

2008-02-03  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, libmisc/salt.c: Do not seed the random number generator
	each time, and use the time in microseconds to avoid having the