@@ -2,6 +2,8 @@
 
 	* src/usermod.c: Use a function to convert the dates from
 	/etc/shadow to human readable dates.
+	* src/usermod.c: Really log the expiration date change as human
+	readable strings instead of integers.
 
 2008-02-03  Nicolas François  <nicolas.francois@centraliens.net>
 
